termapp statistika fix ja db kaabitseja hoiab nüüd skoore string-ina.